syntax = "proto3";

import "brewblox.proto";
import "nanopb.proto";
import "AnalogConstraints.proto";

package blox;

message ActuatorOffset {
  option (nanopb_msgopt).msgid = 308;

  enum SettingOrValue {
    SETTING = 0;
    VALUE = 1;
  }

  uint32 targetId = 1 [ (brewblox).link = ProcessValueLink, (nanopb).int_size = IS_16 ];
  bool targetValid = 2 [ (brewblox).readonly = true ];
  uint32 referenceId = 3 [ (brewblox).link = ProcessValueLink, (nanopb).int_size = IS_16 ];
  SettingOrValue referenceSettingOrValue = 4;
  bool referenceValid = 5 [ (brewblox).readonly = true ];
  sint32 setting = 6 [ (brewblox).scale = 4096, (nanopb).int_size = IS_32, (brewblox).readonly = true ];
  sint32 value = 7 [ (brewblox).scale = 4096, (nanopb).int_size = IS_32, (brewblox).readonly = true ];
  AnalogConstraints constrainedBy = 8;
}
