syntax = "proto3";

import "brewblox.proto";
import "nanopb.proto";

package blox;

message SetpointSimple {
    option (nanopb_msgopt).msgid = 300;
    sint32 setting = 1 [(brewblox).unit = "degC", (brewblox).scale = 4096, (nanopb).int_size = IS_32];
}
